--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
   align-content: center;
 }
+div {
+  text-align: center;
+}
 input [type=text] {
    
     transition: width 0.4s ease-in-out;
